# esdc

./: .env.example  .gitignore  <MagicMock id='4517167376'>  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TIMESERIES_DOCUMENTATION.md  pyproject.toml  test_widgets.py
.design/: cli-id.md  cli-show-test.md  cli-show.md
.opencode/plans/: 2025-03-27-comprehensive-ui-fix.md  2025-03-27-real-time-streaming.md  2025-03-27-simplify-chat-ui.md  2025-03-31-refactor-server-with-bridge-library.md  2025-04-03-native-tool-calling.md  2026-03-26-chat-flow-collapsibles.md  2026-03-27-chat-collapsible-fix.md
docs/: ui-layout.md
docs/active/: README.md
docs/backlog/: README.md
docs/completed/: README.md
docs/completed/2025-03/: 2025-03-17-esdc-chat-tui-implementation.md
docs/completed/2025-03-opencode/: 2025-03-27-fix-ui-issues.md
docs/completed/2026-03/: 2026-03-17-chat-tui-enhancement.md  2026-03-18-ide-style-layout-implementation.md  2026-03-18-ide-style-layout-redesign.md  2026-03-26-ui-panel-refactor.md  2026-03-28-fix-right-panel-issues-dynamic.md  2026-03-28-fix-right-panel-issues.md  2026-03-28-fix-tool-call-bugs.md  2026-03-28-right-panel-restructure.md
docs/plans/: 2025-03-17-integration-tests-plan.md  2025-03-31-problem-cluster-extraction.md  2026-04-04-error-logging-enhancement.md  2026-04-05-performance-optimization.md
docs/reference/: README.md
docs/reference/schema/: esdc-database-schema.md
docs/sessions/: 2026-03-28-domain-knowledge.md  README.md
esdc/: __init__.py  config_wizard.py  configs.py  console.py  db_security.py  dbmanager.py  esdc.py  idgen.py  re0.py  selection.py  summarizer.py  sys_prompt.md  validate.py  view_builder.py
esdc/auth/: __init__.py  oauth.py
esdc/chat/: __init__.py  agent.py  app.py  context_manager.py  document_tools.py  domain_knowledge.py  external_tools.py  memory.py  openterminal.py  phoenix_config.py  prompts.py  query_classifier.py  schema_loader.py  text_to_sql.py  tools.py  wizard.py
esdc/chat/domain_knowledge/: __init__.py  columns.py  concepts.py  functions.py  graph_schema.yaml  ksmi_schema.yaml  problems.py  schema_definitions.py  synonyms.py  tables.py  uncertainty.py
esdc/commands/: __init__.py  configs.py  ingest.py  provider.py
esdc/knowledge_graph/: __init__.py  chunking.py  db.py  document_types.py  embedding_manager.py  embeddings.py  entity_embeddings.py  entity_resolver.py  graph_db.py  hybrid_extractor.py  ladybug_manager.py  llm_extraction.py  master_entities.py  models.py  patterns.py  pipeline.py  relationships.py  resolver.py  schema.py  semantic_matcher.py  semantic_resolver.py  spatial_resolver.py
esdc/phoenix/: __init__.py  phoenix_config.py  phoenix_evals.py  phoenix_tracing.py  run_evals.py
esdc/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  google.py  groq.py  ollama.py  ollama_cloud.py  openai.py  openai_compatible.py
esdc/server/: __init__.py  agent_factory.py  agent_wrapper.py  app.py  cache.py  constants.py  content_accumulator.py  event_streamer.py  logging_config.py  message_utils.py  models.py  responses_events.py  responses_models.py  responses_wrapper.py  routes.py  stream_buffer.py  stream_utils.py  thinking_parser.py  thinking_state.py  title_detection.py  tool_display.py  tool_formatter.py
esdc/sql/: create_column_uuid.sql  create_esdc_view.sql  create_fts_indexes.sql  create_project_resources_is_discovered.sql  create_project_resources_project_stage.sql  create_project_resources_uuid.sql  create_table_project_resources.sql  create_table_project_timeseries.sql  create_timeseries_views.sql  view_field_resources.sql  view_nkri_resources.sql  view_project_resources.sql  view_resources.sql  view_wa_resources.sql
plans/: 2026-04-05-openwebui-follow-up-questions-fix.md
tests/: conftest.py  test_agent_tool_binding.py  test_agent_tool_truncation.py  test_agent_wrapper.py  test_chat_app.py  test_chat_dom.py  test_chat_mounting.py  test_citation_output.py  test_cli.py  test_config_wizard.py  test_config_wizard_cancel.py  test_config_wizard_navigation.py  test_configs.py  test_configs_commands.py  test_configs_provider.py  test_content_accumulator.py  test_content_before_tool_calls.py  test_context_manager.py  test_dbmanager.py  test_domain_knowledge.py  test_domain_knowledge_tools.py  test_entity_wk_enrichment.py  test_esdc.py  test_event_streamer.py  test_external_tools.py  test_fts_reindex_after_per_year_fetch.py  test_fts_rewrite.py  test_hybrid_tool_flow.py  test_idgen.py  test_incomplete_status.py  test_interleaved_thinking_integration.py  test_keepalive.py  test_logging_config.py  test_native_tool_calling.py  test_new_providers.py  test_ollama_cloud.py  test_openterminal.py  test_openterminal_run_python.py  test_phoenix_config.py  test_phoenix_evals.py  (+27 more)
tests/chat/: test_document_tools.py
tests/commands/: test_ingest.py
tests/integration/: constants.py  test_fetch_integration.py  test_semantic_search_integration.py  test_show_integration.py
tests/knowledge_graph/: __init__.py  mock_ladybug.py  test_chunking.py  test_db.py  test_document_types.py  test_embedding_manager.py  test_embeddings.py  test_entity_embeddings.py  test_entity_resolver.py  test_graph_db.py  test_hybrid_search.py  test_llm_extraction.py  test_master_entities.py  test_pipeline.py  test_relationships.py  test_resolver.py  test_semantic_matcher.py  test_semantic_resolver.py  test_semantic_tool.py  test_spatial_resolver.py
tests/performance/: benchmark_message_conversion.py  benchmark_streaming.py
tests/server/: test_cache.py  test_chat_completions_input.py  test_responses_input.py
