[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esdc"
version = "0.6.0"
description = "IRIS - Intelligent Reservoir Inference System for Indonesian oil & gas reserves database"
requires-python = ">=3.10,<3.15"
authors = [
  { name = "Fajril Ambia", email = "fajril@ambia.id" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.2",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "typer>=0.12.4",
    "tabulate>=0.9.0",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0",
    "textual>=0.52.0",
    # Database
    "duckdb>=0.10.0",
    "diskcache>=5.6.0",
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    # Direct APIs
    "ollama>=0.4.0",
    "click>=8.0.0",
    # Web server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
    "real-ladybug>=0.15.3",
    # Machine Learning
    "scikit-learn>=1.3.0",
    # Observability & Evaluation (Arize Phoenix)
    "arize-phoenix-otel>=0.5",
    "openinference-instrumentation-langchain>=0.1.30",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "arize-phoenix>=14.8.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/fajril/esdc"

[project.scripts]
esdc = "esdc.esdc:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
esdc = ["sql/*", "chat/domain_knowledge/*.yaml"]

[tool.setuptools.exclude-package-data]
esdc = ["tests"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

# These are expected in this codebase - suppress them
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
reportCallInDefaultInitializer = false

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at first line
    "N811",  # Constant imported as non-constant name
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806"]  # Mock variable names use convention like MockClient

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.15.1",
    "pytest-benchmark>=4.0.0",
    "responses>=0.26.0",
    "pylint>=4.0.1",
    "basedpyright>=1.38.2",
    "pandas-stubs>=2.2.2",
    "types-requests>=2.33.0.20260402",
    "types-tabulate>=0.10.0.20260308",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services or real database",
    "allow_provider_config: skip the autouse provider config mock",
]

